[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "belial-backend"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = []
authors = [{ name = "ManMade2", email = "madskris@proton.me" }]
classifiers = [
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "flask",
  "flask-cors",
  "djlint",
  "pydantic",
  "ManMade2.BelialDB==1.0.6",
]

[project.urls]
Documentation = "https://github.com/ManMade2/belial-backend#readme"
Issues = "https://github.com/ManMade2/belial-backend/issues"
Source = "https://github.com/ManMade2/belial-backend"

[tool.hatch.version]
path = "src/belial_backend/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/belial_backend tests}"

[tool.coverage.run]
source_pkgs = ["belial_backend", "tests"]
branch = true
parallel = true
omit = ["src/belial_backend/__about__.py"]

[tool.coverage.paths]
belial_backend = ["src/belial_backend", "*/belial-backend/src/belial_backend"]
tests = ["tests", "*/belial-backend/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
